Revert "Fixed vertical height issue on mobile."
This reverts commit 94a49c21680212eaecc00045824928c00b2cdeec.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -98,7 +98,7 @@ $transparent-white: rgba(255,255,255, 0.97);
     }
 
     > section {
-      height: 100%;
+      height: 100vh;
       width: 100%;
     }
 
